Implementing the abstract method applyDirective that takes into account if the initialNumber of copies has been changed by a directive, and applies the change. A warning about working with a deprecated api for Integers has been made.