@@ -11,6 +11,7 @@ import core.Connection;
 import core.DTNHost;
 import core.Message;
 import core.Settings;
+import core.control.DirectiveCode;
 
 /**
  * Implementation of Spray and wait router as depicted in
@@ -80,7 +81,7 @@ public class SprayAndWaitRouter extends ActiveRouter {
 		makeRoomForNewMessage(msg.getSize());
 
 		msg.setTtl(this.msgTtl);
-		msg.addProperty(MSG_COUNT_PROPERTY, new Integer(initialNrofCopies));
+		msg.addProperty(MSG_COUNT_PROPERTY, Integer.valueOf(initialNrofCopies));
 		addToMessages(msg, true);
 		return true;
 	}
@@ -145,8 +146,13 @@ public class SprayAndWaitRouter extends ActiveRouter {
 			return; // ..start of transfer -> no need to reduce amount of copies
 		}
 
-		/* reduce the amount of copies left */
+		/* reduce the amount of copies left */ 
 		nrofCopies = (Integer)msg.getProperty(MSG_COUNT_PROPERTY);
+		/* applying any possible change to the initialNrofCopies after the 
+		 * application of a directive. */
+		if(nrofCopies > this.initialNrofCopies) {
+			nrofCopies = this.initialNrofCopies;
+		}
 		if (isBinary) {
 			/* in binary S'n'W the sending node keeps ceil(n/2) copies */
 			nrofCopies = (int)Math.ceil(nrofCopies/2.0);
@@ -161,4 +167,17 @@ public class SprayAndWaitRouter extends ActiveRouter {
 	public SprayAndWaitRouter replicate() {
 		return new SprayAndWaitRouter(this);
 	}
+
+	public int getInitialNrofCopies() {
+		return initialNrofCopies;
+	}
+	
+	@Override
+	protected void applyDirective(Message message) {
+		if (message.containsProperty​(DirectiveCode.NROF_COPIES_CODE.toString())) {
+			this.initialNrofCopies = ((Integer) message.getProperty(DirectiveCode.NROF_COPIES_CODE.toString()))
+					.intValue();
+		}
+	}
+	
 }
